# awscosttool-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/aws-cost-report/code/: code-summary.md
aidlc-docs/construction/aws-cost-report/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/aws-cost-report/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: aws-cost-report-code-generation-plan.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
src/: config.rs  cost.rs  date.rs  main.rs  report.rs
