[package]
name = "aws-cost-report"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aws-cost-report"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1"
aws-sdk-sts = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
anyhow = "1"
